# SoundMeter

./: CMakeLists.txt
include/: AudioInput.h  AudioWorker.h  FrequencyAnalyzer.h  FrequencyMeter.h  MainWindow.h
src/: AudioInput.cpp  AudioWorker.cpp  FrequencyAnalyzer.cpp  FrequencyMeter.cpp  MainWindow.cpp  MainWindow.ui  main.cpp
